--- a/.changes/v0.13.md
+++ b/.changes/v0.13.md
@@ -1,5 +1,6 @@
 v0.13 - 2026-02-08
 
 - 修复STRM同步时，本地路径不以/开头导致同步失败，提示：路径 xxx 不存在（linux+本地类型）
+- 修复本地代理播放链接（STRM直连地址为docker容器ip或内网ip）无法在8095接口或外网播放的问题（碰到本地代理播放链接时8095接口会回源处理类似本地视频，这回走NAS上传或者服务器流量）
 - 8095端口支持Emby共享地址：\\192.168.1.100\share\media这种格式的本地媒体文件回源处理，人话就是可以播放
 - 增加百度网盘同步支持（刮削暂不支持）
