重新引入sqlite，并且添加数据库配置流程。重构postgres启动逻辑

--- a/.changes/v0.13.3.md
+++ b/.changes/v0.13.3.md
@@ -1,4 +1,9 @@
 v0.13.3 - 2026-02-09
 
 - 8095端口优化百度网盘直链处理，当直链包含 proxy-115 时，回源处理。否则将百度直链放在DirectStreamUrl中。
+- Fix #100 OpenList 网盘联动删除功能失效
 - 首次启动时增加数据库配置页面，可以选择使用sqlite或者postgres，如果选择postgres可以选择外部连接或者内置数据库。
+- 修复使用GUID启动时的权限问题
+   - windows会忽略GUID，使用当前用户权限启动。
+   - linux如果设置了GUID，会使用GUID权限启动，PG数据库也会使用GUID启动。
+   - linux如果没有设置GUID，会使用root权限启动，PG数据库会使用qms权限启动。
